test/tests/operators/to_amazon_cloudwatch/hlc/08-hlc-invalid-endpoint.txt
error: failed to initialize CloudWatch HTTP client: invalid url: invalid-url
  --> tests/operators/to_amazon_cloudwatch/hlc/08-hlc-invalid-endpoint.tql:11:12
   |
11 |   endpoint="invalid-url"
   |            ^^^^^^^^^^^^^ 
   |
